both platforms build with success

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,11 @@
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
+# Kotlin/Native: workaround for foundation-layout-uikitsimarm64 codegen failure on iOS.
+# Compose plugin manages cacheKind by default; we disable that and set none explicitly.
+compose.kotlin.native.manageCacheKind=false
+kotlin.native.cacheKind=none
+
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
