--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,12 +26,16 @@ kotlinx-coroutines = "1.10.2"
 # --- Database ---
 room = "2.8.4"
 sqlite = "2.6.2"
+sqlDelight = "2.0.2"
 
 # --- Images ---
 coil = "3.0.0"
 
 # Material3 is versioned separately in Compose 1.10; use alpha05
 material3 = "1.10.0-alpha05"
+
+# Navigation 3 (Compose Multiplatform)
+multiplatform-nav3-ui = "1.0.0-alpha05"
 
 
 [libraries]
@@ -78,6 +82,14 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
+# --- Navigation 3 ---
+jetbrains-navigation3-ui = { module = "org.jetbrains.androidx.navigation3:navigation3-ui", version.ref = "multiplatform-nav3-ui" }
+
+# --- SQLDelight ---
+sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
+sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
+sqldelight-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
+
 # --- Images ---
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor2", version.ref = "coil" }
@@ -94,3 +106,4 @@ composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "k
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
